--- a/javachat/src/main/resources/com/javachat/chat_view.fxml
+++ b/javachat/src/main/resources/com/javachat/chat_view.fxml
@@ -11,7 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/chatViewStyle.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javachat.controllers.PrimaryController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" 
+minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
+stylesheets="@styles/chatViewStyle.css" xmlns="http://javafx.com/javafx/21" 
+xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javachat.controllers.PrimaryController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="600.0" style="-fx-background-color: #eee;">
          <children>
