--- a/javachat/src/main/resources/com/javachat/login_view.fxml
+++ b/javachat/src/main/resources/com/javachat/login_view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -9,8 +10,8 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fcf4e6;" xmlns="http://javafx.com/javafx/21" 
-xmlns:fx="http://javafx.com/fxml/1">
+prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fcf4e6;" 
+xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javachat.controllers.LoginController">
    <children>
       <VBox alignment="CENTER" prefHeight="174.0" prefWidth="605.0">
          <children>
@@ -36,11 +37,16 @@ xmlns:fx="http://javafx.com/fxml/1">
                   <Insets right="220.0" top="20.0" />
                </VBox.margin>
             </Label>
-            <TextField prefHeight="26.0" prefWidth="299.0">
+            <TextField fx:id="usernameField" prefHeight="26.0" prefWidth="299.0">
                <VBox.margin>
                   <Insets left="120.0" right="120.0" />
                </VBox.margin>
             </TextField>
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#handleLoginButtonPress" style="-fx-background-color: d6d6d6;" text="Login">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
          </children>
       </VBox>
       <HBox alignment="CENTER" prefHeight="27.0" prefWidth="600.0">
