--- a/javachat/src/main/resources/com/javachat/login_view.fxml
+++ b/javachat/src/main/resources/com/javachat/login_view.fxml
@@ -9,9 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fcf4e6;" 
-xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javachat.controllers.LoginController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fcf4e6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javachat.controllers.LoginController">
    <children>
       <VBox alignment="CENTER" prefHeight="174.0" prefWidth="605.0">
          <children>
@@ -42,11 +40,19 @@ xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:contr
                   <Insets left="120.0" right="120.0" />
                </VBox.margin>
             </TextField>
-            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#handleLoginButtonPress" style="-fx-background-color: d6d6d6;" text="Login">
+            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="loginButton" mnemonicParsing="false" onAction="#handleLoginButtonPress" style="-fx-background-color: d6d6d6;" text="Login" />
+                  <Button fx:id="historyButton" mnemonicParsing="false" onAction="#handleHistoryButtonPress" style="-fx-background-color: d6d6d6;" text="Chat History">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets top="15.0" />
                </VBox.margin>
-            </Button>
+            </HBox>
          </children>
       </VBox>
       <HBox alignment="CENTER" prefHeight="27.0" prefWidth="600.0">
