--- a/javachat/src/main/resources/com/javachat/history_view.fxml
+++ b/javachat/src/main/resources/com/javachat/history_view.fxml
@@ -1,56 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fcf4e6;" xmlns="http://javafx.com/javafx/21" 
-xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javachat.controllers.HistoryController">
-   <children>
-      <HBox alignment="CENTER" prefHeight="85.0" prefWidth="600.0">
-         <children>
-            <Label alignment="CENTER" text="Recent Chats">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="51.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@icon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </ImageView>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="246.0" prefWidth="600.0">
-         <children>
-            <VBox alignment="TOP_CENTER" prefHeight="246.0" prefWidth="470.0">
-               <children>
-                  <ListView prefHeight="246.0" prefWidth="517.0" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="600.0">
-         <children>
-            <Button fx:id="menuButton" mnemonicParsing="false" onAction="#handleMenuButtonPress" style="-fx-background-color: d6d6d6;" text="Main Menu">
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-         <VBox.margin>
-            <Insets top="15.0" />
-         </VBox.margin>
-      </HBox>
-   </children>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fcf4e6;"
+      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" 
+      fx:controller="com.javachat.controllers.HistoryController">
+    <children>
+        <HBox alignment="CENTER" prefHeight="85.0" prefWidth="600.0">
+            <children>
+                <Label text="Recent Chats" HBox.hgrow="ALWAYS">
+                    <font>
+                        <Font size="24.0" />
+                    </font>
+                </Label>
+            </children>
+        </HBox>
+        <Pagination fx:id="pagination" prefHeight="200.0" prefWidth="600.0" VBox.vgrow="ALWAYS" />
+        <Button fx:id="menuButton" text="Main Menu" onAction="#handleMenuButtonPress" style="-fx-background-color: #d6d6d6;" maxWidth="Infinity" />
+    </children>
 </VBox>
